0.8.0 - currently working on
- [#4350] Fix: Fix undefined and unused variables
- [#3987] Change: Require TYPO3 4.4
- [#4377] Fix: Autoload entries for Country Model and Repository are missing the Classes/ prefix
- [#4326] Cleanup: Remove the Zend Studio metadata from all projects
- [#4290] Feature: Add an ImageSourceViewHelper
- [#4289] Feature: Add an UppercaseViewHelper
- [#4299] Feature: Add an extbase model and repository for static countries
- [#4288] Cleanup: Move the Google Maps ViewHelper to a fluid-conform location
- [#4248] Feature: Add the UID to the Google Maps markers and provide a way to find a marker by UID
- [#4249] Feature: Log deprecated function calls
- [#4257] Feature: Include the mapper class name in the exception when a mapper is added twice to the mapper registry
- [#4279] Cleanup: Make true, false and null uppercase
- [#4263] Cleanup: Convert the XCLASS code to use $GLOBALS
- [#4177] Cleanup: Update the copyright to 2011
- [#4262] Cleanup: Drop the XCLASS code from abstract classes
- [#4254] Bugfix: Document that geo coordinates must be floats
- [#4247] Feature: Add an Identity interface
- [#4243] Feature: Add a Google Map ViewHelper
- [#4256] Cleanup: Change "EMailAddress" to "EmailAddress" in all function and method names so they are true CamelCase
- [#4242] Feature: Add an interface for Map points
- [#4244] Fix: Change the geocoding throttling to allow only 2500 requests per day
- [#4245] Feature: Add List::toArray
- [#4238] Feature: Add an interface for Geocoding
- [#4239] Feature: Update the Google geocoding to V3
- [#4237] Cleanup: Use the new class names for the Geocoding classes
- [#4195] Fix: Fix crash in TYPO3 4.6 by calling parent::__construct instead of the old PHP4 style constructors
- [#4154] Feature: Add List::inRange
- [#4169] Fix: Drop unused code and some unused variables
- [#4168] Feature: Add Model_FrontEndUser::setName
- [#4167] Feature: Add Mapper_FrontEndUser::findByUserName