@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4344] Fix: Non-static methods of the TranslatorRegistry are called statically in the unit tests
 - [#4350] Fix: Fix undefined and unused variables
 - [#3987] Change: Require TYPO3 4.4
 - [#4377] Fix: Autoload entries for Country Model and Repository are missing the Classes/ prefix
